syntax = "proto3";

package notes;

option go_package = "obsidianGoNaive/protos/gen/go/notes";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service Notes {
  rpc Create (CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/notes"
      body: "note"
    };
  };
  rpc GetByID (GetByIdRequest) returns (GetByIdResponse) {
    option (google.api.http) = {
      get: "/notes/{id}"
    };
  };
  rpc Find (FindRequest) returns (FindResponse) {
    option (google.api.http) = {
      get: "/notes"
    };
  };
  rpc UpdateById (UpdateByIdRequest) returns (UpdateByIdResponse) {};
  rpc DeleteById (DeleteByIdRequest) returns (DeleteByIdResponse) {
    option (google.api.http) = {
      delete: "/notes/{id}"
    };
  };
}

message Note {
  string id = 1;
  string title = 2;
  string path = 3;
  string class = 4;
  repeated string tags = 5;
  repeated string links = 6;
  string content = 7;
  google.protobuf.Timestamp create_time = 8;
  google.protobuf.Timestamp update_time = 9;
}

message CreateRequest {
  Note note = 1;
}
message CreateResponse {
  Note note = 1;
}

message GetByIdRequest {
  string id = 1;
}
message GetByIdResponse {
  Note note = 1;
}

message GetAllRequest {}
message GetAllResponse {
  repeated Note notes = 1;
}

message UpdateByIdRequest {
  Note note = 1;
}
message UpdateByIdResponse {}

message DeleteByIdRequest {
  string id = 1;
}
message DeleteByIdResponse {}

message FindRequest {
  string name = 1; // /notes&name=
  string ancestor = 2; // /notes&ancestor=
  int64 limit = 3; //
}
message  FindResponse {
  repeated Note note = 1;
}
