syntax = "proto3";

package updater;

option go_package = "obsidianGoNaive/protos/gen/updater";

import "google/api/annotations.proto";
import "common/common.proto";

service Updater {
  rpc Update (UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/notes/{id}"
    };
  };
}

message UpdateRequest {
  common.Note note = 1;
}
message UpdateResponse {}